parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> encabezado constantes voces
Rule 2     encabezado -> tempo compasDef
Rule 3     tempo -> HASH TEMPO FIGURE NUMBER
Rule 4     compasDef -> HASH COMPAS NUMBER DIV NUMBER
Rule 5     constantes -> CONST CONSTID EQUAL NUMBER SEMICOLON constantes
Rule 6     constantes -> CONST CONSTID EQUAL CONSTID SEMICOLON constantes
Rule 7     constantes -> <empty>
Rule 8     voces -> voz voces
Rule 9     voces -> <empty>
Rule 10    voz -> decla_instrumento LCURL musica RCURL
Rule 11    decla_instrumento -> VOICE LPAREN NUMBER RPAREN
Rule 12    decla_instrumento -> VOICE LPAREN CONSTID RPAREN
Rule 13    musica -> <empty>
Rule 14    musica -> compas musica
Rule 15    musica -> bucle musica
Rule 16    compas -> COMPAS LCURL notas RCURL
Rule 17    bucle -> REPEAT LPAREN NUMBER RPAREN LCURL musica RCURL
Rule 18    bucle -> REPEAT LPAREN CONSTID RPAREN LCURL musica RCURL
Rule 19    notas -> <empty>
Rule 20    notas -> figura notas
Rule 21    figura -> notaProd
Rule 22    figura -> silencio
Rule 23    notaProd -> NOTA LPAREN altura COMMA NUMBER COMMA duracion RPAREN SEMICOLON
Rule 24    notaProd -> NOTA LPAREN altura COMMA CONSTID COMMA duracion RPAREN SEMICOLON
Rule 25    altura -> NOTAID simbolo_altura
Rule 26    simbolo_altura -> <empty>
Rule 27    simbolo_altura -> ALTURA
Rule 28    duracion -> FIGURE
Rule 29    duracion -> FIGURE DOT
Rule 30    silencio -> SILENCIO LPAREN duracion RPAREN SEMICOLON

Terminals, with rules where they appear

ALTURA               : 27
COMMA                : 23 23 24 24
COMPAS               : 4 16
CONST                : 5 6
CONSTID              : 5 6 6 12 18 24
DIV                  : 4
DOT                  : 29
EQUAL                : 5 6
FIGURE               : 3 28 29
HASH                 : 3 4
LCURL                : 10 16 17 18
LPAREN               : 11 12 17 18 23 24 30
NOTA                 : 23 24
NOTAID               : 25
NUMBER               : 3 4 4 5 11 17 23
RCURL                : 10 16 17 18
REPEAT               : 17 18
RPAREN               : 11 12 17 18 23 24 30
SEMICOLON            : 5 6 23 24 30
SILENCIO             : 30
TEMPO                : 3
VOICE                : 11 12
error                : 

Nonterminals, with rules where they appear

altura               : 23 24
bucle                : 15
compas               : 14
compasDef            : 2
constantes           : 1 5 6
decla_instrumento    : 10
duracion             : 23 24 30
encabezado           : 1
figura               : 20
musica               : 10 14 15 17 18
notaProd             : 21
notas                : 16 20
silencio             : 22
simbolo_altura       : 25
start                : 0
tempo                : 2
voces                : 1 8
voz                  : 8

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . encabezado constantes voces
    (2) encabezado -> . tempo compasDef
    (3) tempo -> . HASH TEMPO FIGURE NUMBER

    HASH            shift and go to state 1

    encabezado                     shift and go to state 2
    tempo                          shift and go to state 3
    start                          shift and go to state 4

state 1

    (3) tempo -> HASH . TEMPO FIGURE NUMBER

    TEMPO           shift and go to state 5


state 2

    (1) start -> encabezado . constantes voces
    (5) constantes -> . CONST CONSTID EQUAL NUMBER SEMICOLON constantes
    (6) constantes -> . CONST CONSTID EQUAL CONSTID SEMICOLON constantes
    (7) constantes -> .

    CONST           shift and go to state 6
    VOICE           reduce using rule 7 (constantes -> .)
    $end            reduce using rule 7 (constantes -> .)

    constantes                     shift and go to state 7

state 3

    (2) encabezado -> tempo . compasDef
    (4) compasDef -> . HASH COMPAS NUMBER DIV NUMBER

    HASH            shift and go to state 8

    compasDef                      shift and go to state 9

state 4

    (0) S' -> start .



state 5

    (3) tempo -> HASH TEMPO . FIGURE NUMBER

    FIGURE          shift and go to state 10


state 6

    (5) constantes -> CONST . CONSTID EQUAL NUMBER SEMICOLON constantes
    (6) constantes -> CONST . CONSTID EQUAL CONSTID SEMICOLON constantes

    CONSTID         shift and go to state 11


state 7

    (1) start -> encabezado constantes . voces
    (8) voces -> . voz voces
    (9) voces -> .
    (10) voz -> . decla_instrumento LCURL musica RCURL
    (11) decla_instrumento -> . VOICE LPAREN NUMBER RPAREN
    (12) decla_instrumento -> . VOICE LPAREN CONSTID RPAREN

    $end            reduce using rule 9 (voces -> .)
    VOICE           shift and go to state 14

    decla_instrumento              shift and go to state 12
    voces                          shift and go to state 13
    voz                            shift and go to state 15

state 8

    (4) compasDef -> HASH . COMPAS NUMBER DIV NUMBER

    COMPAS          shift and go to state 16


state 9

    (2) encabezado -> tempo compasDef .

    CONST           reduce using rule 2 (encabezado -> tempo compasDef .)
    VOICE           reduce using rule 2 (encabezado -> tempo compasDef .)
    $end            reduce using rule 2 (encabezado -> tempo compasDef .)


state 10

    (3) tempo -> HASH TEMPO FIGURE . NUMBER

    NUMBER          shift and go to state 17


state 11

    (5) constantes -> CONST CONSTID . EQUAL NUMBER SEMICOLON constantes
    (6) constantes -> CONST CONSTID . EQUAL CONSTID SEMICOLON constantes

    EQUAL           shift and go to state 18


state 12

    (10) voz -> decla_instrumento . LCURL musica RCURL

    LCURL           shift and go to state 19


state 13

    (1) start -> encabezado constantes voces .

    $end            reduce using rule 1 (start -> encabezado constantes voces .)


state 14

    (11) decla_instrumento -> VOICE . LPAREN NUMBER RPAREN
    (12) decla_instrumento -> VOICE . LPAREN CONSTID RPAREN

    LPAREN          shift and go to state 20


state 15

    (8) voces -> voz . voces
    (8) voces -> . voz voces
    (9) voces -> .
    (10) voz -> . decla_instrumento LCURL musica RCURL
    (11) decla_instrumento -> . VOICE LPAREN NUMBER RPAREN
    (12) decla_instrumento -> . VOICE LPAREN CONSTID RPAREN

    $end            reduce using rule 9 (voces -> .)
    VOICE           shift and go to state 14

    voces                          shift and go to state 21
    voz                            shift and go to state 15
    decla_instrumento              shift and go to state 12

state 16

    (4) compasDef -> HASH COMPAS . NUMBER DIV NUMBER

    NUMBER          shift and go to state 22


state 17

    (3) tempo -> HASH TEMPO FIGURE NUMBER .

    HASH            reduce using rule 3 (tempo -> HASH TEMPO FIGURE NUMBER .)


state 18

    (5) constantes -> CONST CONSTID EQUAL . NUMBER SEMICOLON constantes
    (6) constantes -> CONST CONSTID EQUAL . CONSTID SEMICOLON constantes

    NUMBER          shift and go to state 23
    CONSTID         shift and go to state 24


state 19

    (10) voz -> decla_instrumento LCURL . musica RCURL
    (13) musica -> .
    (14) musica -> . compas musica
    (15) musica -> . bucle musica
    (16) compas -> . COMPAS LCURL notas RCURL
    (17) bucle -> . REPEAT LPAREN NUMBER RPAREN LCURL musica RCURL
    (18) bucle -> . REPEAT LPAREN CONSTID RPAREN LCURL musica RCURL

    RCURL           reduce using rule 13 (musica -> .)
    COMPAS          shift and go to state 29
    REPEAT          shift and go to state 25

    compas                         shift and go to state 27
    musica                         shift and go to state 28
    bucle                          shift and go to state 26

state 20

    (11) decla_instrumento -> VOICE LPAREN . NUMBER RPAREN
    (12) decla_instrumento -> VOICE LPAREN . CONSTID RPAREN

    NUMBER          shift and go to state 30
    CONSTID         shift and go to state 31


state 21

    (8) voces -> voz voces .

    $end            reduce using rule 8 (voces -> voz voces .)


state 22

    (4) compasDef -> HASH COMPAS NUMBER . DIV NUMBER

    DIV             shift and go to state 32


state 23

    (5) constantes -> CONST CONSTID EQUAL NUMBER . SEMICOLON constantes

    SEMICOLON       shift and go to state 33


state 24

    (6) constantes -> CONST CONSTID EQUAL CONSTID . SEMICOLON constantes

    SEMICOLON       shift and go to state 34


state 25

    (17) bucle -> REPEAT . LPAREN NUMBER RPAREN LCURL musica RCURL
    (18) bucle -> REPEAT . LPAREN CONSTID RPAREN LCURL musica RCURL

    LPAREN          shift and go to state 35


state 26

    (15) musica -> bucle . musica
    (13) musica -> .
    (14) musica -> . compas musica
    (15) musica -> . bucle musica
    (16) compas -> . COMPAS LCURL notas RCURL
    (17) bucle -> . REPEAT LPAREN NUMBER RPAREN LCURL musica RCURL
    (18) bucle -> . REPEAT LPAREN CONSTID RPAREN LCURL musica RCURL

    RCURL           reduce using rule 13 (musica -> .)
    COMPAS          shift and go to state 29
    REPEAT          shift and go to state 25

    musica                         shift and go to state 36
    bucle                          shift and go to state 26
    compas                         shift and go to state 27

state 27

    (14) musica -> compas . musica
    (13) musica -> .
    (14) musica -> . compas musica
    (15) musica -> . bucle musica
    (16) compas -> . COMPAS LCURL notas RCURL
    (17) bucle -> . REPEAT LPAREN NUMBER RPAREN LCURL musica RCURL
    (18) bucle -> . REPEAT LPAREN CONSTID RPAREN LCURL musica RCURL

    RCURL           reduce using rule 13 (musica -> .)
    COMPAS          shift and go to state 29
    REPEAT          shift and go to state 25

    musica                         shift and go to state 37
    bucle                          shift and go to state 26
    compas                         shift and go to state 27

state 28

    (10) voz -> decla_instrumento LCURL musica . RCURL

    RCURL           shift and go to state 38


state 29

    (16) compas -> COMPAS . LCURL notas RCURL

    LCURL           shift and go to state 39


state 30

    (11) decla_instrumento -> VOICE LPAREN NUMBER . RPAREN

    RPAREN          shift and go to state 40


state 31

    (12) decla_instrumento -> VOICE LPAREN CONSTID . RPAREN

    RPAREN          shift and go to state 41


state 32

    (4) compasDef -> HASH COMPAS NUMBER DIV . NUMBER

    NUMBER          shift and go to state 42


state 33

    (5) constantes -> CONST CONSTID EQUAL NUMBER SEMICOLON . constantes
    (5) constantes -> . CONST CONSTID EQUAL NUMBER SEMICOLON constantes
    (6) constantes -> . CONST CONSTID EQUAL CONSTID SEMICOLON constantes
    (7) constantes -> .

    CONST           shift and go to state 6
    VOICE           reduce using rule 7 (constantes -> .)
    $end            reduce using rule 7 (constantes -> .)

    constantes                     shift and go to state 43

state 34

    (6) constantes -> CONST CONSTID EQUAL CONSTID SEMICOLON . constantes
    (5) constantes -> . CONST CONSTID EQUAL NUMBER SEMICOLON constantes
    (6) constantes -> . CONST CONSTID EQUAL CONSTID SEMICOLON constantes
    (7) constantes -> .

    CONST           shift and go to state 6
    VOICE           reduce using rule 7 (constantes -> .)
    $end            reduce using rule 7 (constantes -> .)

    constantes                     shift and go to state 44

state 35

    (17) bucle -> REPEAT LPAREN . NUMBER RPAREN LCURL musica RCURL
    (18) bucle -> REPEAT LPAREN . CONSTID RPAREN LCURL musica RCURL

    NUMBER          shift and go to state 45
    CONSTID         shift and go to state 46


state 36

    (15) musica -> bucle musica .

    RCURL           reduce using rule 15 (musica -> bucle musica .)


state 37

    (14) musica -> compas musica .

    RCURL           reduce using rule 14 (musica -> compas musica .)


state 38

    (10) voz -> decla_instrumento LCURL musica RCURL .

    VOICE           reduce using rule 10 (voz -> decla_instrumento LCURL musica RCURL .)
    $end            reduce using rule 10 (voz -> decla_instrumento LCURL musica RCURL .)


state 39

    (16) compas -> COMPAS LCURL . notas RCURL
    (19) notas -> .
    (20) notas -> . figura notas
    (21) figura -> . notaProd
    (22) figura -> . silencio
    (23) notaProd -> . NOTA LPAREN altura COMMA NUMBER COMMA duracion RPAREN SEMICOLON
    (24) notaProd -> . NOTA LPAREN altura COMMA CONSTID COMMA duracion RPAREN SEMICOLON
    (30) silencio -> . SILENCIO LPAREN duracion RPAREN SEMICOLON

    RCURL           reduce using rule 19 (notas -> .)
    NOTA            shift and go to state 51
    SILENCIO        shift and go to state 50

    figura                         shift and go to state 47
    notas                          shift and go to state 48
    notaProd                       shift and go to state 49
    silencio                       shift and go to state 52

state 40

    (11) decla_instrumento -> VOICE LPAREN NUMBER RPAREN .

    LCURL           reduce using rule 11 (decla_instrumento -> VOICE LPAREN NUMBER RPAREN .)


state 41

    (12) decla_instrumento -> VOICE LPAREN CONSTID RPAREN .

    LCURL           reduce using rule 12 (decla_instrumento -> VOICE LPAREN CONSTID RPAREN .)


state 42

    (4) compasDef -> HASH COMPAS NUMBER DIV NUMBER .

    CONST           reduce using rule 4 (compasDef -> HASH COMPAS NUMBER DIV NUMBER .)
    VOICE           reduce using rule 4 (compasDef -> HASH COMPAS NUMBER DIV NUMBER .)
    $end            reduce using rule 4 (compasDef -> HASH COMPAS NUMBER DIV NUMBER .)


state 43

    (5) constantes -> CONST CONSTID EQUAL NUMBER SEMICOLON constantes .

    VOICE           reduce using rule 5 (constantes -> CONST CONSTID EQUAL NUMBER SEMICOLON constantes .)
    $end            reduce using rule 5 (constantes -> CONST CONSTID EQUAL NUMBER SEMICOLON constantes .)


state 44

    (6) constantes -> CONST CONSTID EQUAL CONSTID SEMICOLON constantes .

    VOICE           reduce using rule 6 (constantes -> CONST CONSTID EQUAL CONSTID SEMICOLON constantes .)
    $end            reduce using rule 6 (constantes -> CONST CONSTID EQUAL CONSTID SEMICOLON constantes .)


state 45

    (17) bucle -> REPEAT LPAREN NUMBER . RPAREN LCURL musica RCURL

    RPAREN          shift and go to state 53


state 46

    (18) bucle -> REPEAT LPAREN CONSTID . RPAREN LCURL musica RCURL

    RPAREN          shift and go to state 54


state 47

    (20) notas -> figura . notas
    (19) notas -> .
    (20) notas -> . figura notas
    (21) figura -> . notaProd
    (22) figura -> . silencio
    (23) notaProd -> . NOTA LPAREN altura COMMA NUMBER COMMA duracion RPAREN SEMICOLON
    (24) notaProd -> . NOTA LPAREN altura COMMA CONSTID COMMA duracion RPAREN SEMICOLON
    (30) silencio -> . SILENCIO LPAREN duracion RPAREN SEMICOLON

    RCURL           reduce using rule 19 (notas -> .)
    NOTA            shift and go to state 51
    SILENCIO        shift and go to state 50

    figura                         shift and go to state 47
    notas                          shift and go to state 55
    notaProd                       shift and go to state 49
    silencio                       shift and go to state 52

state 48

    (16) compas -> COMPAS LCURL notas . RCURL

    RCURL           shift and go to state 56


state 49

    (21) figura -> notaProd .

    NOTA            reduce using rule 21 (figura -> notaProd .)
    SILENCIO        reduce using rule 21 (figura -> notaProd .)
    RCURL           reduce using rule 21 (figura -> notaProd .)


state 50

    (30) silencio -> SILENCIO . LPAREN duracion RPAREN SEMICOLON

    LPAREN          shift and go to state 57


state 51

    (23) notaProd -> NOTA . LPAREN altura COMMA NUMBER COMMA duracion RPAREN SEMICOLON
    (24) notaProd -> NOTA . LPAREN altura COMMA CONSTID COMMA duracion RPAREN SEMICOLON

    LPAREN          shift and go to state 58


state 52

    (22) figura -> silencio .

    NOTA            reduce using rule 22 (figura -> silencio .)
    SILENCIO        reduce using rule 22 (figura -> silencio .)
    RCURL           reduce using rule 22 (figura -> silencio .)


state 53

    (17) bucle -> REPEAT LPAREN NUMBER RPAREN . LCURL musica RCURL

    LCURL           shift and go to state 59


state 54

    (18) bucle -> REPEAT LPAREN CONSTID RPAREN . LCURL musica RCURL

    LCURL           shift and go to state 60


state 55

    (20) notas -> figura notas .

    RCURL           reduce using rule 20 (notas -> figura notas .)


state 56

    (16) compas -> COMPAS LCURL notas RCURL .

    COMPAS          reduce using rule 16 (compas -> COMPAS LCURL notas RCURL .)
    REPEAT          reduce using rule 16 (compas -> COMPAS LCURL notas RCURL .)
    RCURL           reduce using rule 16 (compas -> COMPAS LCURL notas RCURL .)


state 57

    (30) silencio -> SILENCIO LPAREN . duracion RPAREN SEMICOLON
    (28) duracion -> . FIGURE
    (29) duracion -> . FIGURE DOT

    FIGURE          shift and go to state 61

    duracion                       shift and go to state 62

state 58

    (23) notaProd -> NOTA LPAREN . altura COMMA NUMBER COMMA duracion RPAREN SEMICOLON
    (24) notaProd -> NOTA LPAREN . altura COMMA CONSTID COMMA duracion RPAREN SEMICOLON
    (25) altura -> . NOTAID simbolo_altura

    NOTAID          shift and go to state 63

    altura                         shift and go to state 64

state 59

    (17) bucle -> REPEAT LPAREN NUMBER RPAREN LCURL . musica RCURL
    (13) musica -> .
    (14) musica -> . compas musica
    (15) musica -> . bucle musica
    (16) compas -> . COMPAS LCURL notas RCURL
    (17) bucle -> . REPEAT LPAREN NUMBER RPAREN LCURL musica RCURL
    (18) bucle -> . REPEAT LPAREN CONSTID RPAREN LCURL musica RCURL

    RCURL           reduce using rule 13 (musica -> .)
    COMPAS          shift and go to state 29
    REPEAT          shift and go to state 25

    musica                         shift and go to state 65
    bucle                          shift and go to state 26
    compas                         shift and go to state 27

state 60

    (18) bucle -> REPEAT LPAREN CONSTID RPAREN LCURL . musica RCURL
    (13) musica -> .
    (14) musica -> . compas musica
    (15) musica -> . bucle musica
    (16) compas -> . COMPAS LCURL notas RCURL
    (17) bucle -> . REPEAT LPAREN NUMBER RPAREN LCURL musica RCURL
    (18) bucle -> . REPEAT LPAREN CONSTID RPAREN LCURL musica RCURL

    RCURL           reduce using rule 13 (musica -> .)
    COMPAS          shift and go to state 29
    REPEAT          shift and go to state 25

    musica                         shift and go to state 66
    bucle                          shift and go to state 26
    compas                         shift and go to state 27

state 61

    (28) duracion -> FIGURE .
    (29) duracion -> FIGURE . DOT

    RPAREN          reduce using rule 28 (duracion -> FIGURE .)
    DOT             shift and go to state 67


state 62

    (30) silencio -> SILENCIO LPAREN duracion . RPAREN SEMICOLON

    RPAREN          shift and go to state 68


state 63

    (25) altura -> NOTAID . simbolo_altura
    (26) simbolo_altura -> .
    (27) simbolo_altura -> . ALTURA

    COMMA           reduce using rule 26 (simbolo_altura -> .)
    ALTURA          shift and go to state 70

    simbolo_altura                 shift and go to state 69

state 64

    (23) notaProd -> NOTA LPAREN altura . COMMA NUMBER COMMA duracion RPAREN SEMICOLON
    (24) notaProd -> NOTA LPAREN altura . COMMA CONSTID COMMA duracion RPAREN SEMICOLON

    COMMA           shift and go to state 71


state 65

    (17) bucle -> REPEAT LPAREN NUMBER RPAREN LCURL musica . RCURL

    RCURL           shift and go to state 72


state 66

    (18) bucle -> REPEAT LPAREN CONSTID RPAREN LCURL musica . RCURL

    RCURL           shift and go to state 73


state 67

    (29) duracion -> FIGURE DOT .

    RPAREN          reduce using rule 29 (duracion -> FIGURE DOT .)


state 68

    (30) silencio -> SILENCIO LPAREN duracion RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 74


state 69

    (25) altura -> NOTAID simbolo_altura .

    COMMA           reduce using rule 25 (altura -> NOTAID simbolo_altura .)


state 70

    (27) simbolo_altura -> ALTURA .

    COMMA           reduce using rule 27 (simbolo_altura -> ALTURA .)


state 71

    (23) notaProd -> NOTA LPAREN altura COMMA . NUMBER COMMA duracion RPAREN SEMICOLON
    (24) notaProd -> NOTA LPAREN altura COMMA . CONSTID COMMA duracion RPAREN SEMICOLON

    NUMBER          shift and go to state 75
    CONSTID         shift and go to state 76


state 72

    (17) bucle -> REPEAT LPAREN NUMBER RPAREN LCURL musica RCURL .

    COMPAS          reduce using rule 17 (bucle -> REPEAT LPAREN NUMBER RPAREN LCURL musica RCURL .)
    REPEAT          reduce using rule 17 (bucle -> REPEAT LPAREN NUMBER RPAREN LCURL musica RCURL .)
    RCURL           reduce using rule 17 (bucle -> REPEAT LPAREN NUMBER RPAREN LCURL musica RCURL .)


state 73

    (18) bucle -> REPEAT LPAREN CONSTID RPAREN LCURL musica RCURL .

    COMPAS          reduce using rule 18 (bucle -> REPEAT LPAREN CONSTID RPAREN LCURL musica RCURL .)
    REPEAT          reduce using rule 18 (bucle -> REPEAT LPAREN CONSTID RPAREN LCURL musica RCURL .)
    RCURL           reduce using rule 18 (bucle -> REPEAT LPAREN CONSTID RPAREN LCURL musica RCURL .)


state 74

    (30) silencio -> SILENCIO LPAREN duracion RPAREN SEMICOLON .

    NOTA            reduce using rule 30 (silencio -> SILENCIO LPAREN duracion RPAREN SEMICOLON .)
    SILENCIO        reduce using rule 30 (silencio -> SILENCIO LPAREN duracion RPAREN SEMICOLON .)
    RCURL           reduce using rule 30 (silencio -> SILENCIO LPAREN duracion RPAREN SEMICOLON .)


state 75

    (23) notaProd -> NOTA LPAREN altura COMMA NUMBER . COMMA duracion RPAREN SEMICOLON

    COMMA           shift and go to state 77


state 76

    (24) notaProd -> NOTA LPAREN altura COMMA CONSTID . COMMA duracion RPAREN SEMICOLON

    COMMA           shift and go to state 78


state 77

    (23) notaProd -> NOTA LPAREN altura COMMA NUMBER COMMA . duracion RPAREN SEMICOLON
    (28) duracion -> . FIGURE
    (29) duracion -> . FIGURE DOT

    FIGURE          shift and go to state 61

    duracion                       shift and go to state 79

state 78

    (24) notaProd -> NOTA LPAREN altura COMMA CONSTID COMMA . duracion RPAREN SEMICOLON
    (28) duracion -> . FIGURE
    (29) duracion -> . FIGURE DOT

    FIGURE          shift and go to state 61

    duracion                       shift and go to state 80

state 79

    (23) notaProd -> NOTA LPAREN altura COMMA NUMBER COMMA duracion . RPAREN SEMICOLON

    RPAREN          shift and go to state 81


state 80

    (24) notaProd -> NOTA LPAREN altura COMMA CONSTID COMMA duracion . RPAREN SEMICOLON

    RPAREN          shift and go to state 82


state 81

    (23) notaProd -> NOTA LPAREN altura COMMA NUMBER COMMA duracion RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 83


state 82

    (24) notaProd -> NOTA LPAREN altura COMMA CONSTID COMMA duracion RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 84


state 83

    (23) notaProd -> NOTA LPAREN altura COMMA NUMBER COMMA duracion RPAREN SEMICOLON .

    NOTA            reduce using rule 23 (notaProd -> NOTA LPAREN altura COMMA NUMBER COMMA duracion RPAREN SEMICOLON .)
    SILENCIO        reduce using rule 23 (notaProd -> NOTA LPAREN altura COMMA NUMBER COMMA duracion RPAREN SEMICOLON .)
    RCURL           reduce using rule 23 (notaProd -> NOTA LPAREN altura COMMA NUMBER COMMA duracion RPAREN SEMICOLON .)


state 84

    (24) notaProd -> NOTA LPAREN altura COMMA CONSTID COMMA duracion RPAREN SEMICOLON .

    NOTA            reduce using rule 24 (notaProd -> NOTA LPAREN altura COMMA CONSTID COMMA duracion RPAREN SEMICOLON .)
    SILENCIO        reduce using rule 24 (notaProd -> NOTA LPAREN altura COMMA CONSTID COMMA duracion RPAREN SEMICOLON .)
    RCURL           reduce using rule 24 (notaProd -> NOTA LPAREN altura COMMA CONSTID COMMA duracion RPAREN SEMICOLON .)

